# web-synth

./: .gitignore  Cargo.toml  Makefile
ui/: Makefile  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/lib/: web-synth.ts
